#S06P12A507-51 [Add] 아이디 찾기 이메일 인증(코드) 구현

--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -180,6 +180,9 @@ dependencies {
     implementation("io.springfox:springfox-bean-validators:3.0.0")
     implementation("io.springfox:springfox-boot-starter:3.0.0")
 
+    // email 인증
+    implementation 'org.springframework.boot:spring-boot-starter-mail'
+
     compile("javax.annotation:javax.annotation-api:1.2")
 
     implementation("org.projectlombok:lombok:1.18.20")
