--- a/backend/src/main/resources/email.properties
+++ b/backend/src/main/resources/email.properties
@@ -7,5 +7,5 @@ mail.smtp.port=465
 mail.smtp.socketFactory.port=465
 
 #admin \uAD6C\uAE00 \uACC4\uC815
-AdminMail.id=bhaeun1105@gmail.com
-AdminMail.password=Dream20WM!
+AdminMail.id=jjanhae
+AdminMail.password=ssafyjjanhae
