--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -33,6 +33,7 @@ plugins {
 apply plugin: 'io.spring.dependency-management'
 apply plugin: 'eclipse'
 apply plugin: 'com.github.node-gradle.node'
+apply plugin: 'base'
 //이클립스인 경우를 위한 QueryDSL 플러그인. IntelliJ는 불필요.
 //apply plugin: 'com.ewerk.gradle.plugins.querydsl'
 
@@ -70,7 +71,7 @@ task webpack(type: NpmTask, dependsOn: 'npmInstall') {
 }
 
 // processResources is a Java task. Run the webpack bundling before this task using the 'build' task in the package.json
-//processResources.dependsOn 'webpack'
+processResources.dependsOn 'webpack'
 
 //set build time and inject value to application.properties
 def buildTime() {
