--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "axios": "^0.25.0",
     "bootstrap": "^5.1.3",
     "classnames": "^2.3.1",
+    "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.1",
     "react-datepicker": "^4.6.0",
