--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 #it will be set build date by gradle. if this value is @build.date@, front-end is development mode
 build.date=@build.date@
 server.port=8081
-server.address=i6a507.p.ssafy.io
+server.address=0.0.0.0
 server.servlet.contextPath=/
 # Charset of HTTP requests and responses. Added to the "Content-Type" header if not set explicitly.
 server.servlet.encoding.charset=UTF-8
