--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,7 +22,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "BUILD_PATH='../backend/src/main/resources/dist' react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -45,7 +45,9 @@
     ]
   },
   "devDependencies": {
+    "cross-env": "^7.0.3",
     "postcss": "^8.4.5",
     "postcss-loader": "^6.2.1"
-  }
+  },
+  "homepage": "./"
 }
