[Test]HTTPS test

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,6 +1,13 @@
 #it will be set build date by gradle. if this value is @build.date@, front-end is development mode
 build.date=@build.date@
-server.port=8081
+server.port=8443
+server.http.port=8080
+server.ssl.enabled=true
+server.ssl.key-store-type=PKCS12
+server.ssl.key-store=classpath:keystore/ssafy.p12
+server.ssl.key-alias=ssafy
+trust.store.classpath:keystore/ssafy.p12
+trust.store.password=jjanhae
 server.address=0.0.0.0
 server.servlet.contextPath=/
 # Charset of HTTP requests and responses. Added to the "Content-Type" header if not set explicitly.
