[Test]HTTPS 설정 시도 2

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -5,8 +5,9 @@ server.http.port=8080
 server.ssl.enabled=true
 server.ssl.key-store-type=PKCS12
 server.ssl.key-store=classpath:keystore/ssafy.p12
+server.ssl.key-store-password=jjanhae
 server.ssl.key-alias=ssafy
-trust.store.classpath:keystore/ssafy.p12
+trust.store=classpath:keystore/ssafy.p12
 trust.store.password=jjanhae
 server.address=0.0.0.0
 server.servlet.contextPath=/
