--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^17.0.2",
     "react-google-login": "^5.2.2",
     "react-hook-form": "^7.24.1",
+    "react-input-range": "^1.3.0",
     "react-modal": "^3.14.4",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
