--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "react-bootstrap": "^2.1.1",
     "react-datepicker": "^4.6.0",
     "react-dom": "^17.0.2",
+    "react-fast-marquee": "^1.3.1",
     "react-google-login": "^5.2.2",
     "react-hook-form": "^7.24.1",
     "react-modal": "^3.14.4",
