--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -39,6 +39,15 @@ jwt.expiration=1296000000
 spring.http.converters.preferred-json-mapper=gson
 spring.mvc.converters.preferred-json-mapper=gson
 
+
+# AWS 마스터 계정 또는 IAMUSER 정보
+cloud.aws.stack.auto=false
+cloud.aws.credentials.access-key=AKIATWN4SAMBHV3VTW2Z
+cloud.aws.credentials.secret-key=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
+# AWS S3 bucket의 정보
+cloud.aws.s3.bucket=jjanhae-image/image
+cloud.aws.region.static=ap-northeast-2
+
 #logging
 logging.file.name=./ssafy-web.log
 logging.level.root=INFO
