--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "react-fast-marquee": "^1.3.1",
     "react-google-login": "^5.2.2",
     "react-hook-form": "^7.24.1",
+    "react-loader-spinner": "^5.1.0",
     "react-modal": "^3.14.4",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
