--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -158,6 +158,8 @@ dependencies {
     //Kurento (미디어서버) 관련 의존성 추가
     implementation('org.kurento:kurento-client:6.16.0')
     implementation('org.kurento:kurento-utils-js:6.15.0')
+    //openvidu
+    implementation group: 'io.openvidu', name: 'openvidu-java-client', version: '2.20.0'
 
 
     //IntelliJ용
