--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -68,3 +68,7 @@ management.servlet.context-path=/manage
 management.health.db.enabled=true
 management.health.default.enabled=true
 management.health.diskspace.enabled=true
+
+# openvidu
+openvidu.url: https://i6a507.p.ssafy.io:5443/
+openvidu.secret: jjanhae
