--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,7 +22,8 @@
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "react-table": "^7.7.0",
-    "web-vitals": "^2.1.0"
+    "web-vitals": "^2.1.0",
+    "openvidu-browser": "2.20.0"
   },
   "scripts": {
     "start": "react-scripts start",
