--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,15 +4,18 @@
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.7.1",
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/icons": "^4.11.2",
     "@ramonak/react-progress-bar": "^4.2.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.2.1",
     "axios": "^0.25.0",
+    "jquery": "3.5.0",
     "bootstrap": "^5.1.3",
-    "openvidu-browser": "2.20.0",
     "classnames": "^2.3.1",
     "moment": "^2.29.1",
+    "openvidu-browser": "2.20.0",
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.1",
     "react-datepicker": "^4.6.0",
