[Update] docker-compose.yml timezone 수정..

--- a/gateway/docker-compose.yml
+++ b/gateway/docker-compose.yml
@@ -21,6 +21,8 @@ services:
     image: nginx-react
   api:
     image: jjanhae
+    environment:
+      - TZ=Asia/Seoul
     #jenkins:
     #image: jenkins
     #sql:
