#S06P12A507-236/[Add] openvidu 로컬 설정 완료

--- a/openvidu-server/src/main/resources/application.properties
+++ b/openvidu-server/src/main/resources/application.properties
@@ -2,8 +2,8 @@
 server.port=4443
 server.ssl.enabled=true
 #server.ssl.key-store=/etc/letsencrypt/live/i6a507.p.ssafy.io/i6a507.p.ssafy.io.p12
-server.ssl.key-store=classpath:openvidu-selfsigned.p12
-server.ssl.key-store-password=openvidu
+server.ssl.key-store=C:/keystore.p12
+server.ssl.key-store-password=changeit
 server.ssl.key-store-type=PKCS12
 #server.ssl.key-alias=ssafy
 server.servlet.session.cookie.name=OVJSESSIONID
