--- a/openvidu-server/dockerfile
+++ b/openvidu-server/dockerfile
@@ -12,6 +12,7 @@ CMD mvn clean install -U
 # RUN ./gradlew bootJar
 FROM adoptopenjdk/openjdk11:latest
 WORKDIR /app
-COPY --from=builder /app/build/libs/openvidu-server-2.20.0.jar ./openvidu.jar
+# COPY --from=builder /app/build/libs/openvidu-server-2.20.0.jar ./openvidu.jar
+COPY --from=builder /app/openvidu-server.jar ./openvidu.jar
 EXPOSE 8443
 ENTRYPOINT ["java", "-jar", "openvidu.jar"]
