--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,9 +11,9 @@
     "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.2.1",
     "axios": "^0.25.0",
-    "jquery": "3.5.0",
     "bootstrap": "^5.1.3",
     "classnames": "^2.3.1",
+    "jquery": "3.5.0",
     "moment": "^2.29.1",
     "openvidu-browser": "2.20.0",
     "react": "^17.0.2",
@@ -25,6 +25,7 @@
     "react-hook-form": "^7.24.1",
     "react-loader-spinner": "^5.1.0",
     "react-modal": "^3.14.4",
+    "react-player": "^2.9.0",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "react-spinners": "^0.11.0",
