[Fix] openvidu dockerfile 수정

--- a/openvidu-server/dockerfile
+++ b/openvidu-server/dockerfile
@@ -1,4 +1,4 @@
-FROM adoptopenjdk/openjdk11:latest as builder
+FROM maven:3.8-jdk-11 as builder
 WORKDIR /app
 # COPY build.gradle settings.gradle gradlew ./
 # COPY gradle ./gradle
