--- a/openvidu-server/dockerfile
+++ b/openvidu-server/dockerfile
@@ -1,12 +1,3 @@
-FROM adoptopenjdk/openjdk11:latest as builder
-# Copy OpenVidu Server
-RUN rm -rf /var/lib/apt/lists/*
-COPY openvidu-server.jar /
-COPY ./docker/openvidu-server/entrypoint.sh /usr/local/bin
-COPY ./docker/openvidu-server/discover_my_public_ip.sh /usr/local/bin
-RUN chmod +x /usr/local/bin/entrypoint.sh && \
-    chmod +x /usr/local/bin/discover_my_public_ip.sh
-
+FROM adoptopenjdk/openjdk11:latest
 EXPOSE 8443
-
-CMD /usr/local/bin/entrypoint.sh
+ENTRYPOINT ["java", "-jar", "openvidu.jar"]
