--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,9 +11,10 @@
     "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.2.1",
     "axios": "^0.25.0",
-    "jquery": "3.5.0",
     "bootstrap": "^5.1.3",
     "classnames": "^2.3.1",
+    "html2canvas": "^1.4.1",
+    "jquery": "3.5.0",
     "moment": "^2.29.1",
     "openvidu-browser": "2.20.0",
     "react": "^17.0.2",
