[Fix] application.properties

--- a/openvidu-server/src/main/resources/application.properties
+++ b/openvidu-server/src/main/resources/application.properties
@@ -20,8 +20,8 @@ OPENVIDU_SECRET=jjanhae
 # common (??)
 CERTIFICATE_TYPE=selfsigned
 HTTPS_PORT=4443
-#KMS_URIS=["ws://i6a507.p.ssafy.io:8888/kurento"]
-KMS_URIS=["ws://localhost:8888/kurento"]
+KMS_URIS=["ws://i6a507.p.ssafy.io:8888/kurento"]
+#KMS_URIS=["ws://localhost:8888/kurento"]
 server.ssl.enabled=true
 server.ssl.key-store-type=PKCS12
 server.servlet.session.cookie.name=OVJSESSIONID
