[Update] docker-compose.yml kurento추가

--- a/gateway/docker-compose.yml
+++ b/gateway/docker-compose.yml
@@ -23,6 +23,8 @@ services:
     image: jjanhae
     environment:
       - TZ=Asia/Seoul
+  kurento:
+    image: kurento/kurento-media-server
     #jenkins:
     #image: jenkins
     #sql:
