[Update] local과 컨테이너 어플리케이션 properties 설정

--- a/openvidu-server/src/main/resources/application.properties
+++ b/openvidu-server/src/main/resources/application.properties
@@ -1,9 +1,24 @@
-server.address=0.0.0.0
-server.ssl.enabled=true
+# local
+#server.ssl.key-store=C:/keystore.p12
+#server.ssl.key-store-password=changeit
+#DOMAIN_OR_PUBLIC_IP=localhost
+#KMS_URIS=["ws://i6a507.p.ssafy.io:8888/kurento"]
+
+# container
 server.ssl.key-store=classpath:i6a507.p.ssafy.io.p12
 server.ssl.key-store-password=jjanhae
-server.ssl.key-store-type=PKCS12
 server.ssl.key-alias=ssafy
+DOMAIN_OR_PUBLIC_IP=i6a507.p.ssafy.io
+KMS_URIS=["ws://localhost:8888/kurento"]
+
+# common
+
+OPENVIDU_SECRET=jjanhae
+CERTIFICATE_TYPE=selfsigned
+server.address=0.0.0.0
+HTTPS_PORT=5443
+server.ssl.enabled=true
+server.ssl.key-store-type=PKCS12
 server.servlet.session.cookie.name=OVJSESSIONID
 
 logging.level.root=info
@@ -13,11 +28,6 @@ SUPPORT_DEPRECATED_API=true
 
 DOTENV_PATH=.
 
-DOMAIN_OR_PUBLIC_IP=i6a507.p.ssafy.io
-OPENVIDU_SECRET=jjanhae
-CERTIFICATE_TYPE=selfsigned
-HTTPS_PORT=5443
-KMS_URIS=["ws://localhost:8888/kurento"]
 
 OPENVIDU_CDR=false
 OPENVIDU_CDR_PATH=/opt/openvidu/cdr
