[Fix] 커밋할땐 무조건 openvidu application.properties container설정

--- a/openvidu-server/src/main/resources/application.properties
+++ b/openvidu-server/src/main/resources/application.properties
@@ -1,15 +1,15 @@
 # local
-server.ssl.key-store=C:/keystore.p12
-server.ssl.key-store-password=changeit
-DOMAIN_OR_PUBLIC_IP=localhost
-KMS_URIS=["ws://i6a507.p.ssafy.io:8888/kurento"]
+#server.ssl.key-store=C:/keystore.p12
+#server.ssl.key-store-password=changeit
+#DOMAIN_OR_PUBLIC_IP=localhost
+#KMS_URIS=["ws://i6a507.p.ssafy.io:8888/kurento"]
 
 # container
-#server.ssl.key-store=classpath:i6a507.p.ssafy.io.p12
-#server.ssl.key-store-password=jjanhae
-#server.ssl.key-alias=ssafy
-#DOMAIN_OR_PUBLIC_IP=i6a507.p.ssafy.io
-#KMS_URIS=["ws://localhost:8888/kurento"]
+server.ssl.key-store=classpath:i6a507.p.ssafy.io.p12
+server.ssl.key-store-password=jjanhae
+server.ssl.key-alias=ssafy
+DOMAIN_OR_PUBLIC_IP=i6a507.p.ssafy.io
+KMS_URIS=["ws://localhost:8888/kurento"]
 
 # common
 
