--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "@testing-library/user-event": "^13.2.1",
     "axios": "^0.25.0",
     "bootstrap": "^5.1.3",
+    "chart.js": "^3.7.1",
     "classnames": "^2.3.1",
     "html2canvas": "^1.4.1",
     "jquery": "3.5.0",
@@ -19,6 +20,7 @@
     "openvidu-browser": "2.20.0",
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.1",
+    "react-chartjs-2": "^4.0.1",
     "react-datepicker": "^4.6.0",
     "react-dom": "^17.0.2",
     "react-fast-marquee": "^1.3.1",
