--- a/frontend/package.json
+++ b/frontend/package.json
@@ -33,6 +33,7 @@
     "react-scripts": "5.0.0",
     "react-spinners": "^0.11.0",
     "react-table": "^7.7.0",
+    "react-toastify": "^8.1.1",
     "styled-components": "^5.3.3",
     "web-vitals": "^2.1.0"
   },
