--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -25,7 +25,7 @@ spring.jpa.hibernate.naming.physical-strategy=org.springframework.boot.orm.jpa.h
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL57Dialect
 spring.data.web.pageable.one-indexed-parameters=true
-spring.datasource.url=jdbc:mysql://iec2-3-35-166-203.ap-northeast-2.compute.amazonaws.com:3306/jjanhae?useUnicode=true&characterEncoding=utf8&serverTimezone=Asia/Seoul&zeroDateTimeBehavior=convertToNull&rewriteBatchedStatements=true
+spring.datasource.url=jdbc:mysql://ec2-3-35-174-218.ap-northeast-2.compute.amazonaws.com:3306/jjanhae?useUnicode=true&characterEncoding=utf8&serverTimezone=Asia/Seoul&zeroDateTimeBehavior=convertToNull&rewriteBatchedStatements=true
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username: jjanhae
 spring.datasource.password: password
