--- a/frontend/package.json
+++ b/frontend/package.json
@@ -41,7 +41,7 @@
     "web-vitals": "^2.1.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "node --max-old-space-size=8192 react-scripts start",
     "build": "BUILD_PATH='./build' react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
