--- a/frontend/package.json
+++ b/frontend/package.json
@@ -41,8 +41,8 @@
     "web-vitals": "^2.1.0"
   },
   "scripts": {
-    "start": "node --max-old-space-size=8192 react-scripts start",
-    "build": "BUILD_PATH='./build' react-scripts build",
+    "start": "react-scripts --max_old_space_size=4096 start",
+    "build": "BUILD_PATH='./build' react-scripts --max_old_space_size=4096 build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
