--- a/gateway/data/nginx/conf.d/app.conf
+++ b/gateway/data/nginx/conf.d/app.conf
@@ -2,7 +2,7 @@ server {
     listen 80;
     listen [::]:80;
 
-    server_name i6a507.p.ssafy.io;
+    server_name ec2-3-35-174-218.ap-northeast-2.compute.amazonaws.com;
 
     location /.well-known/acme-challenge/ {
         allow all;
@@ -16,11 +16,11 @@ server {
 
 server {
     listen 443 ssl;
-    server_name i6a507.p.ssafy.io;
+    server_name ec2-3-35-174-218.ap-northeast-2.compute.amazonaws.com;
     server_tokens off;
 
-    ssl_certificate /etc/letsencrypt/live/i6a507.p.ssafy.io/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/i6a507.p.ssafy.io/privkey.pem;
+    ssl_certificate /etc/letsencrypt/live/ec2-3-35-174-218.ap-northeast-2.compute.amazonaws.com/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/ec2-3-35-174-218.ap-northeast-2.compute.amazonaws.com/privkey.pem;
     include /etc/letsencrypt/options-ssl-nginx.conf;
     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
