--- a/openvidu-server/src/main/resources/application.properties
+++ b/openvidu-server/src/main/resources/application.properties
@@ -5,10 +5,10 @@
 #KMS_URIS=["ws://i6a507.p.ssafy.io:8888/kurento"]
 
 # container
-server.ssl.key-store=classpath:i6a507.p.ssafy.io.p12
+server.ssl.key-store=classpath:ec2-3-35-174-218.ap-northeast-2.compute.amazonaws.com.p12
 server.ssl.key-store-password=jjanhae
 server.ssl.key-alias=ssafy
-DOMAIN_OR_PUBLIC_IP=i6a507.p.ssafy.io
+DOMAIN_OR_PUBLIC_IP=ec2-3-35-174-218.ap-northeast-2.compute.amazonaws.com
 KMS_URIS=["ws://localhost:8888/kurento"]
 
 # common
