--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -10,6 +10,11 @@ server.servlet.encoding.enabled=true
 # Force the encoding to the configured charset on HTTP requests and responses.
 server.servlet.encoding.force=true
 
+server.ssl.key-store=jjanhae.p12
+server.ssl.key-store-type=PKCS12
+server.ssl.key-store-password=jjanhae
+server.ssl.key-alias=jjanhae
+
 # for SPA
 spring.resources.static-locations=classpath:/dist/
 spa.default-file=/dist/index.html
