--- a/gateway/data/nginx/conf.d/app.conf
+++ b/gateway/data/nginx/conf.d/app.conf
@@ -19,8 +19,8 @@ server {
     server_name ec2-3-35-174-218.ap-northeast-2.compute.amazonaws.com;
     server_tokens off;
 
-    ssl_certificate /etc/letsencrypt/live/ec2-3-35-174-218.ap-northeast-2.compute.amazonaws.com/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/ec2-3-35-174-218.ap-northeast-2.compute.amazonaws.com/privkey.pem;
+    ssl_certificate /etc/letsencrypt/live/jjanhae.com/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/jjanhae.com/privkey.pem;
     include /etc/letsencrypt/options-ssl-nginx.conf;
     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
