--- a/backend/dockerfile
+++ b/backend/dockerfile
@@ -10,8 +10,8 @@ COPY src ./src
 RUN ./gradlew bootJar
 FROM adoptopenjdk/openjdk8:x86_64-alpine-jre8u292-b10
 WORKDIR /app
+COPY jjanhae.p12 ./
 COPY --from=builder /app/build/libs/*.jar ./app.jar
-COPY /home/ubuntu/jjanhae.p12 ./
 EXPOSE 8081
 ENTRYPOINT ["java", "-jar", "app.jar"]
 CMD ["--datasource.username=jjanhae", "--datasource.password=password"]
