--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,6 +1,11 @@
 #it will be set build date by gradle. if this value is @build.date@, front-end is development mode
 build.date=@build.date@
+server.ssl.key-store=classpath:jjanhae.p12
+server.ssl.key-store-type=PKCS12
+server.ssl.key-store-password=jjanhae
+server.ssl.key-alias=jjanhae
 server.port=8081
+server.http2.enabled=true
 server.address=0.0.0.0
 server.servlet.contextPath=/
 # Charset of HTTP requests and responses. Added to the "Content-Type" header if not set explicitly.
@@ -10,10 +15,7 @@ server.servlet.encoding.enabled=true
 # Force the encoding to the configured charset on HTTP requests and responses.
 server.servlet.encoding.force=true
 
-server.ssl.key-store=jjanhae.p12
-server.ssl.key-store-type=PKCS12
-server.ssl.key-store-password=jjanhae
-server.ssl.key-alias=jjanhae
+
 
 # for SPA
 spring.resources.static-locations=classpath:/dist/
