[Update] 제발 되어주세요

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,9 +1,8 @@
 #it will be set build date by gradle. if this value is @build.date@, front-end is development mode
 build.date=@build.date@
-server.ssl.key-store=classpath:jjanhae.p12
+server.ssl.key-store=jjanhae.p12
 server.ssl.key-store-type=PKCS12
 server.ssl.key-store-password=jjanhae
-server.ssl.key-alias=jjanhae
 server.port=8081
 server.http2.enabled=true
 server.address=0.0.0.0
