--- a/openvidu-server/pom.xml
+++ b/openvidu-server/pom.xml
@@ -270,7 +270,7 @@
 		<dependency>
 			<groupId>commons-validator</groupId>
 			<artifactId>commons-validator</artifactId>
-			<version>${version.commons-validator}</version>
+			<version>1.6</version>
 		</dependency>
 		<dependency>
 			<groupId>com.github.docker-java</groupId>
@@ -325,7 +325,7 @@
 		<dependency>
 			<groupId>com.google.code.gson</groupId>
 			<artifactId>gson</artifactId>
-			<version>${version.gson}</version>
+			<version>2.8.5</version>
 		</dependency>
 		<dependency>
 			<groupId>io.openvidu</groupId>
@@ -335,7 +335,7 @@
 		<dependency>
 			<groupId>org.apache.maven</groupId>
 			<artifactId>maven-artifact</artifactId>
-			<version>${version.maven.artifact}</version>
+			<version>3.6.3</version>
 		</dependency>
 
 		<!-- Test dependencies -->
@@ -361,13 +361,13 @@
 		<dependency>
 			<groupId>org.hamcrest</groupId>
 			<artifactId>hamcrest-core</artifactId>
-			<version>${version.hamcrest}</version>
+			<version>1.3</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.hamcrest</groupId>
 			<artifactId>hamcrest-library</artifactId>
-			<version>${version.hamcrest}</version>
+			<version>1.3</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
