--- a/openvidu-server/pom.xml
+++ b/openvidu-server/pom.xml
@@ -199,8 +199,9 @@
 		</dependency>
 		<dependency>
 			<groupId>io.openvidu</groupId>
-			<artifactId>openvidu-client</artifactId>
-			<version>${version.openvidu.client}</version>
+    		<artifactId>openvidu-java-client</artifactId>
+    		<version>2.20.0</version>
+
 			<exclusions>
 				<exclusion>
 					<groupId>org.slf4j</groupId>
