--- a/openvidu-server/pom.xml
+++ b/openvidu-server/pom.xml
@@ -199,9 +199,8 @@
 		</dependency>
 		<dependency>
 			<groupId>io.openvidu</groupId>
-    		<artifactId>openvidu-java-client</artifactId>
-    		<version>2.20.0</version>
-
+			<artifactId>openvidu-client</artifactId>
+			<version>${version.openvidu.client}</version>
 			<exclusions>
 				<exclusion>
 					<groupId>org.slf4j</groupId>
@@ -271,7 +270,7 @@
 		<dependency>
 			<groupId>commons-validator</groupId>
 			<artifactId>commons-validator</artifactId>
-			<version>1.6</version>
+			<version>${version.commons-validator}</version>
 		</dependency>
 		<dependency>
 			<groupId>com.github.docker-java</groupId>
@@ -326,7 +325,7 @@
 		<dependency>
 			<groupId>com.google.code.gson</groupId>
 			<artifactId>gson</artifactId>
-			<version>2.8.5</version>
+			<version>${version.gson}</version>
 		</dependency>
 		<dependency>
 			<groupId>io.openvidu</groupId>
@@ -336,7 +335,7 @@
 		<dependency>
 			<groupId>org.apache.maven</groupId>
 			<artifactId>maven-artifact</artifactId>
-			<version>3.6.3</version>
+			<version>${version.maven.artifact}</version>
 		</dependency>
 
 		<!-- Test dependencies -->
@@ -362,13 +361,13 @@
 		<dependency>
 			<groupId>org.hamcrest</groupId>
 			<artifactId>hamcrest-core</artifactId>
-			<version>1.3</version>
+			<version>${version.hamcrest}</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.hamcrest</groupId>
 			<artifactId>hamcrest-library</artifactId>
-			<version>1.3</version>
+			<version>${version.hamcrest}</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
